# esp32_nat_router

./: .gitignore  ANDI_EDITION.md  KLISCHTRONIK_MOD.md  README.md  build_all_targets.sh  manifest_waveshare_c6_lcd_1_47.json  partitions_16mb.csv  partitions_cyd_4mb.csv  partitions_waveshare_c6_lcd_1_47.csv  sdkconfig.defaults  sdkconfig.defaults.cyd  sdkconfig.defaults.esp32c6_uart  sdkconfig.defaults.esp32s3  sdkconfig.defaults.waveshare_c6_lcd_1_47
components/cmd_router/: cmd_router.c
components/cyd_display/: CMakeLists.txt  Kconfig  cyd_display.c
components/cyd_display/include/: cyd_display.h
components/http_server/: http_server.c  pages.h
components/http_server/pages/: page_access.h  page_index.h
firmware_andi/: README.md  SHA256SUMS.txt
firmware_esp32/: build_info.txt
firmware_esp32c3/: build_info.txt
firmware_esp32c5/: build_info.txt
firmware_esp32c6/: build_info.txt
firmware_esp32s3/: build_info.txt
firmware_extended/: README.md  SHA256SUMS.txt
firmware_klischtronik/cyd2usb_st7789/: README.md  SHA256SUMS.txt
firmware_klischtronik/esp32c6_n4_uart/: README.md  SHA256SUMS.txt
firmware_wt32_eth01/: build_info.txt
include/: router_config.h
main/: CMakeLists.txt  Kconfig.projbuild  esp32_nat_router.c  idf_component.yml  netif_hooks.c
